--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,14 +13,9 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
-
 - task: AzureCLI@2
   inputs:
     azureSubscription: 'Azure CXP FTA Internal Subscription ssarwa(12bb4e89-4f7a-41e0-a38f-b22f079248b4)'
-    scriptType: 'batch'
+    scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: 'az deployment sub create -n ''FinDep'' -l ''westus'' -f main.bicep'
