--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,12 +10,16 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
 - task: AzureCLI@2
   inputs:
     azureSubscription: 'Azure CXP FTA Internal Subscription ssarwa(12bb4e89-4f7a-41e0-a38f-b22f079248b4)'
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: 'az deployment sub create -n ''FinDep'' -l ''westus'' -f main.bicep'
+
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'Azure CXP FTA Internal Subscription ssarwa(12bb4e89-4f7a-41e0-a38f-b22f079248b4)'
+    scriptType: 'bash'
+    scriptLocation: 'inlineScript'
+    inlineScript: 'az aks update -n '' -g '' --attach-acr '''
